--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,16 +1,20 @@
-#caixa{
+#caixa {
     width: 300px;
     height: 300px;
-    /*background:url("../imagens/camera.png");*/
-    /* background
-
-    background:linear-gradient(to top ,pink, violet);
-
+    padding:8px;
+    margin:20px;
+    background: #009670;
+    box-shadow: 20px 20px 2px 10px rgba(0,0,0,0.2);  ;
 
 }
-#caixa h1 {
-    /*background: rgb(255,255,255,0.8);*/
+#caixa  h1 {
+    color:white;
+    text-shadow: 20px 20px 10px rgba(0,0,0,0.6);
 }
+
+/*#caixa h1 {
+    background: rgb(255,255,255,0.8);
+}*/
 
 
 
