--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,5 @@
-#caixa {
+
+/*#caixa {
     width: 300px;
     height: 300px;
     padding:8px;
@@ -30,7 +31,7 @@
 
     /*-webkit_border-radius:20px 90px ;
     -moz-border-radius:20px 90px; */
-    border-radius: 20px ;
+
 /*
 
 #caixa2{
@@ -44,3 +45,61 @@
 }
 /*
 
+
+
+
+/**************ANIMAÇÕES*/
+
+@-webkit-keyframes animacao-caixa{
+ from {/* Estado  Inicial */
+     background:blue;
+     border-radius: 0px;
+ }
+ to {/* Estado  final */
+     background: pink;
+     border-radius:300px;
+
+ }
+
+}
+
+@-moz-keyframes animacao-caixa{
+    from {/* Estado  Inicial */
+        background:blue;
+    }
+    to {/* Estado  final */
+        background: pink;
+   
+    }
+   
+   }
+
+   @-o-keyframes animacao-caixa{
+    from {/* Estado  Inicial */
+        background:blue;
+        border-radius:0px;
+        top:0px;
+        left:0px ;
+    }
+    to {/* Estado  final */
+        background: pink;
+        top:200px;
+        left:200px;
+    }
+   
+   }
+
+#caixa{
+     width: 300px;
+     height:300px;
+     background:red;
+     /*animation-name:animacao-caixa;
+     animation-duration:5s ;
+     animation-delay: 3s;
+     animation-iteration-count: 2;
+     animation-direction: alternate;*/
+
+     animation:animacao-caixa 5s 3s 2 alternate
+
+
+}
