--- a/css/estilo.css
+++ b/css/estilo.css
@@ -18,8 +18,6 @@
 }*/
 
 
-
-
 /* #caixa {
     width:300px;
     height:300px;
@@ -48,14 +46,14 @@
 
 
 
-/**************ANIMAÇÕES*/
+/**************ANIMAÇÕES
 
 @-webkit-keyframes animacao-caixa{
- from {/* Estado  Inicial */
+ from {/* Estado  Inicial 
      background:blue;
      border-radius: 0px;
  }
- to {/* Estado  final */
+ to {/* Estado  final 
      background: pink;
      border-radius:300px;
 
@@ -64,10 +62,10 @@
 }
 
 @-moz-keyframes animacao-caixa{
-    from {/* Estado  Inicial */
+    from {/* Estado  Inicial 
         background:blue;
     }
-    to {/* Estado  final */
+    to {/* Estado  final 
         background: pink;
    
     }
@@ -75,13 +73,13 @@
    }
 
    @-o-keyframes animacao-caixa{
-    from {/* Estado  Inicial */
+    from {/* Estado  Inicial 
         background:blue;
         border-radius:0px;
         top:0px;
         left:0px ;
     }
-    to {/* Estado  final */
+    to {/* Estado  final 
         background: pink;
         top:200px;
         left:200px;
@@ -97,9 +95,25 @@
      animation-duration:5s ;
      animation-delay: 3s;
      animation-iteration-count: 2;
-     animation-direction: alternate;*/
+     animation-direction: alternate;
 
      animation:animacao-caixa 5s 3s 2 alternate
 
+
+}*/
+
+
+
+/***** Transições */
+#caixa{
+    width: 300px; 
+    height: 300px;
+    background: orange;
+}
+#caixa:hover {
+    width:400px;
+    background:yellow;
+    /*transition:width: 3s, bakground 3s;*/
+    transition :all 3s;
 
 }
